--- a/poetry-multilang-site/multilang_site/locale/en/LC_MESSAGES/django.po
+++ b/poetry-multilang-site/multilang_site/locale/en/LC_MESSAGES/django.po
@@ -8,25 +8,25 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-25 11:25+0200\n"
-"PO-Revision-Date: 2024-06-25 11:28+0200\n"
+"POT-Creation-Date: 2024-06-25 11:26+0200\n"
+"PO-Revision-Date: 2024-06-25 11:29+0200\n"
 "Last-Translator:   <corentin.jezierski@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Translated-Using: django-rosetta 0.10.0\n"
 
 #: .\multilang_site\settings.py:144
 msgid "German"
-msgstr "Allemand"
+msgstr "German"
 
 #: .\multilang_site\settings.py:145
 msgid "English"
-msgstr "Anglais"
+msgstr "English"
 
 #: .\multilang_site\settings.py:146
 msgid "French"
-msgstr "Français"
+msgstr "French"
